Dart/testData/analysisServer/highlighting/ErrorAtZeroOffset.dart
<error descr="Libraries that have parts must have a library directive"></error>part 'bar.dart';